--- a/client/package.json
+++ b/client/package.json
@@ -33,5 +33,8 @@
     "vite": "^5.0.3",
     "vite-plugin-tailwind-purgecss": "0.2.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "axios": "^1.6.7"
+  }
 }
