--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -2,18 +2,18 @@
 server {
     listen 80;
     server_name api.itech-club.com;
-    return 301 https://$host$request_uri;
+    #return 301 https://$host$request_uri;
 
-    # location / {
-    #     proxy_pass http://localhost:8000/;
-    # }
+    location / {
+        proxy_pass http://localhost:8000/;
+    }
 }
 server {
     listen 443 ssl;
     server_name api.itech-club.com;
 
-    ssl_certificate /home/itech/Gamified-Form/server/certs/cert.pem;
-    ssl_certificate_key /home/itech/Gamified-Form/server/certs/key.key;
+    ssl_certificate /home/ubuntu/dev/Gamified-Form/server/certs/cert.pem;
+    ssl_certificate_key /home/ubuntu/dev/Gamified-Form/server/certs/key.key;
 
     # Other server settings
     location / {
