--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -12,8 +12,8 @@ server {
     listen 443 ssl;
     server_name api.itech-club.com;
 
-    ssl_certificate /home/ubuntu/dev/Gamified-Form/server/certs/cert.pem;
-    ssl_certificate_key /home/ubuntu/dev/Gamified-Form/server/certs/key.key;
+    ssl_certificate /etc/nginx/ssl/api.itech.pem;
+    ssl_certificate_key /etc/nginx/ssl/api.itech.key;
 
     # Other server settings
     location / {
