--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
   },
   "type": "module",
   "dependencies": {
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "canvas-confetti": "^1.9.2"
   }
 }
